# curves

./: CMakeLists.txt
include/: circle.h  curve.h  curves.h  elipse.h  exceptions.h  helix.h
src/: circle.cpp  elipse.cpp  helix.cpp  main.cpp
